Fixing pointer/touch events on mobile.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -508,6 +508,7 @@ body { /* html won't work for Safari ¯\_(ツ)_/¯ */
     width: 100%;
     height: 100%;
     border: 0;
+    pointer-events: none !important;
   }
 
   .portfolio-video {
